# everbar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: terminal_smoke.py
notebooks/: jupyter_smoke.ipynb  marimo_smoke.py
src/everbar/: __init__.py  _backends.py  _detect.py  _progress.py
tests/: test_detect.py  test_marimo_backend.py  test_progress.py  test_typing.py
